# rocket-agentx

./: Cargo.toml  Dockerfile  Rocket.toml
src/: databases.rs  main.rs
src/entities/: config.rs  datetime.rs  message.rs  mod.rs  oss.rs  response.rs  task.rs
src/routes/: chat.rs  file.rs  mod.rs  task.rs
src/services/: executor.rs  mod.rs  model.rs  oss.rs
src/services/models/: mod.rs  qwen3.rs  qwen3vl.rs
