[package]
name = "rocket-agentx"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["deadpool_redis"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
serde = "1.0.228"
serde_json = "1.0.145"
anyhow = "1.0.100"
chrono = "0.4.42"
uuid = { version = "1.18.1", features = ["v4"] }
base64 = "0.22.1"
state = "0.6.0"
ref-cast = "1.0.25"
reqwest = "0.12.24"
urlencoding = "2.1.3"
regex = "1.12.2"
hmac = "0.12.1"
sha2 = "0.10.9"
futures = "0.3.31"
async-stream = "0.3.6"
bytes = "1.11.0"
quick-xml = { version = "0.38.4", features = ["serialize"] }
# agentx = { git = "https://github.com/VIISEVEN27/rs-agentx.git" }
agentx = { path = "../rs-agentx" }
